# tribunal

./: .gitignore  AUDIT.md  README.md  pyproject.toml
src/tribunal/: __init__.py  agent.py  cli.py  events.py  run.py  scenario.py  verify.py  world.py
tests/: make_fixtures.py  test_chain.py  test_runner.py  test_verifier.py  test_world.py
tests/fixtures/: competent.jsonl  gaming.jsonl  silent_failure.jsonl
